# BNN

./: README.md  pyproject.toml
src/: train.py3
