[project]
name = "bnn"
version = "0.1.0"
description = "BNN is the implementation of a binary-native and gradient-free learning algorithm for Binary Neural Networks."
authors = [
    {name = "Luca Colombo", email = "luca97.colombo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cupy-cuda12x>=13.5.1",
    "ipykernel>=6.29.5",
    "lightning>=2.5.2",
    "pytz>=2025.2",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "ucimlrepo>=0.0.7",
]
